--- a/blocks/footer/__menu-link/footer__menu-link.css
+++ b/blocks/footer/__menu-link/footer__menu-link.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 18px;
+  line-height: 1.125;
   color: #FFFFFF;
   padding-right: 18px;
   text-decoration: none;
