--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,19 +1,18 @@
 .header__lang-link {
   display: block;
   color: #FFFFFF;
-  width: 30px;
-  height: 28px;
 
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 1.16;
   text-align: right;
 
   padding: 0;
   margin-right: 0;
   margin-left: auto;
+  align-self: center;
 }
 
 .header__lang-link:last-child {
@@ -24,9 +23,7 @@
 
 @media (max-width: 320px) {
   .header__lang-link {
-    width: 16px;
-    height: 16px;
     font-size: 18px;
-    line-height: 20px;
+    line-height: 1.11;
   }
 }
