--- a/blocks/image-conclusion/__subtitle/image-conclusion__subtitle.css
+++ b/blocks/image-conclusion/__subtitle/image-conclusion__subtitle.css
@@ -1,12 +1,13 @@
 .image-conclusion__subtitle {
-  width: 360px;
+  max-width: 360px;
+
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
-  /* or 122% */
-  display: inline-block;
+  line-height: 1.22;
+
+  display: block;
   text-align: center;
   color: #FFFFFF;
   margin: 32px auto 245px;
@@ -17,7 +18,7 @@
   .image-conclusion__subtitle {
     max-width: 288px;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     margin: 16px auto 33px;
   }
 }
