--- a/blocks/image-conclusion/__title/image-conclusion__title.css
+++ b/blocks/image-conclusion/__title/image-conclusion__title.css
@@ -5,8 +5,7 @@
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
-  /* or 106% */
+  line-height: 1.06;
 
   text-align: center;
   color: #FFFFFF;
@@ -18,7 +17,7 @@
   .image-conclusion__title {
     max-width: 288px;
     font-size: 32px;
-    line-height: 35px;
+    line-height: 1.09;
     margin: 33px auto 0;
   }
 }
