--- a/blocks/launch/__signature/launch__signature.css
+++ b/blocks/launch/__signature/launch__signature.css
@@ -1,11 +1,11 @@
 .launch__signature {
-  width: 158px;
+  max-width: 158px;
 
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
-  line-height: 14px;
+  line-height: 1.4;
 
   letter-spacing: 1.5px;
   text-transform: uppercase;
