--- a/blocks/launch/__subtitle/launch__subtitle.css
+++ b/blocks/launch/__subtitle/launch__subtitle.css
@@ -1,11 +1,11 @@
 .launch__subtitle {
-  width: 640px;
+  max-width: 640px;
 
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 30px;
-  line-height: 36px;
+  line-height: 1.2;
   text-align: center;
   color: #FFFFFF;
 
@@ -16,9 +16,9 @@
 
 @media (max-width: 320px) {
   .launch__subtitle {
-    width: 288px;
+    max-width: 288px;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 1.25;
     padding-top: 16px;
     padding-bottom: 16px;
   }
