--- a/blocks/launch/__title/launch__title.css
+++ b/blocks/launch/__title/launch__title.css
@@ -3,10 +3,10 @@
   font-style: normal;
   font-weight: 900;
   font-size: 96px;
-  line-height: 100px;
+  line-height: 1.04;
   text-align: center;
   color: #FFFFFF;
-  width: 720px;
+  max-width: 700px;
 
   margin: 0 auto;
   padding-top: 56px;
@@ -14,10 +14,10 @@
 
 @media (max-width: 320px) {
   .launch__title {
-    width: 288px;
+    max-width: 288px;
     font-size: 40px;
-    line-height: 44px;
-  margin-top: 48px;
-  padding-top: 0px;
+    line-height: 1.1;
+    margin-top: 48px;
+    padding-top: 0px;
   }
 }
