--- a/blocks/motivation/__list/motivation__list.css
+++ b/blocks/motivation/__list/motivation__list.css
@@ -1,10 +1,10 @@
 .motivation__list {
-  width: 690px;
+  max-width: 690px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
   font-size: 12px;
-  line-height: 18px;
+  line-height: 1.5;
   color: #FFFFFF;
   margin-bottom: 92px;
 
