--- a/blocks/motivation/__title/motivation__title.css
+++ b/blocks/motivation/__title/motivation__title.css
@@ -1,10 +1,10 @@
 .motivation__title {
-  width: 690px;
+  max-width: 690px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
-  line-height: 58px;
+  line-height: 1.07;
   color: #FFFFFF;
 }
 
@@ -18,6 +18,6 @@
   .motivation__title {
     max-width: 288px;
     font-size: 32px;
-    line-height: 35px;
+    line-height: 1.09;
   }
 }
