--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
-  min-width: 320px;
+  /* min-width: 320px; */
   max-width: 1280px;
-  font-family: inter, Arial, sans-serif;
+  font-family: Inter, Arial, sans-serif;
 
   background-color: #2A2C2F;
   margin: 0 auto;
