скоректировано поведение сайта на 1280 и 1024

--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -3,7 +3,8 @@
   height: 460px;
   display: block;
   margin: 0;
-  /* object-fit: cover; */
+  object-fit: cover;
+  object-position: center;
 }
 
 @media (max-width: 1024px) {
