--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,11 +1,6 @@
 .cards__item {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-
   display: grid;
   grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
   row-gap: 48px;
   column-gap: 40px;
   padding-bottom: 80px;
@@ -13,14 +8,15 @@
 
 @media (max-width: 1024px) {
   .cards__item {
-    column-gap: 80px;
+    column-gap: 32px;
+
   }
 }
 
 @media (max-width: 768px) {
   .cards__item {
     max-width: 720px;
-    column-gap: 73px;
+    column-gap: 73px; /* проверить св-во */
     column-gap: 28px;
   }
 }
