--- a/blocks/cards/__link-heading/cards__link-heading.css
+++ b/blocks/cards/__link-heading/cards__link-heading.css
@@ -1,15 +1,17 @@
 .cards__link-heading {
-  width: 456px;
+  max-width: 456px;
 
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 12px;
-  letter-spacing: 2px;
+  letter-spacing: 1;
 
   color: #AAAAAA;
   margin: 0;
+  padding: 0;
+  text-transform: uppercase;
 }
 
 @media (max-width: 768px) {
