--- a/blocks/cards/__link-url/cards__link-url.css
+++ b/blocks/cards/__link-url/cards__link-url.css
@@ -1,16 +1,14 @@
 .cards__link-url {
-  width: 456px;
-
-  font-family: 'Inter';
+  max-width: 456px;
+  display: block;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
-  /* identical to box height, or 122% */
+  line-height: 1.22;
 
   text-decoration-line: underline;
 
   color: #FFFFFF;
-  align-self: end;
   margin-top: 12px;
 }
