--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,6 +1,6 @@
 .footer__copyright {
   max-width: 186px;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -8,8 +8,10 @@
 
   text-align: right;
   color: #FFFFFF;
-  justify-self: end;
 
+  display: block;
+  margin: 0;
+  padding: 0;
 }
 
 .footer__copyright::before {
