--- a/blocks/footer/__menu-link/footer__menu-link.css
+++ b/blocks/footer/__menu-link/footer__menu-link.css
@@ -1,13 +1,14 @@
 .footer__menu-link {
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.125;
   color: #FFFFFF;
-  padding-right: 18px;
   text-decoration: none;
   display: block;
+  margin: 0;
+  padding: 0;
 }
 
 @media (max-width: 768px) {
