--- a/blocks/footer/__menu/footer__menu.css
+++ b/blocks/footer/__menu/footer__menu.css
@@ -1,7 +1,6 @@
 .footer__menu {
-  display: grid;
-  grid-template-columns: repeat(5, auto);
-  grid-template-rows: 1fr;
+  display: flex;
+  gap: 18px;
 }
 
 @media (max-width: 320px) {
