--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,12 +1,9 @@
 .footer {
   max-width: 1184px;
-  margin-top: 92px;
-  margin-left: 48px;
-  margin-right: 48px;
-  margin-bottom: 24px;
+  margin: 92px 48px 24px 48px;
 
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media (max-width: 1024px) {
