--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,24 +1,16 @@
 .header__lang-link {
-  display: block;
   color: #FFFFFF;
-
-  font-family: 'Inter';
+  display: block;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
-  line-height: 1.16;
-  text-align: right;
+  line-height: 1.17;
 
-  padding: 0;
-  margin-right: 0;
-  margin-left: auto;
-  align-self: center;
-}
+  padding-top: 12px;
+  margin: 0;
 
-.header__lang-link:last-child {
-  padding: 0;
-  margin-left: 18px;
-  margin-right: 0;
+  text-decoration: none;
 }
 
 @media (max-width: 320px) {
