--- a/blocks/image-conclusion/__title/image-conclusion__title.css
+++ b/blocks/image-conclusion/__title/image-conclusion__title.css
@@ -13,6 +13,12 @@
   padding: 0;
 }
 
+@media (max-width: 1024px) {
+  .image-conclusion__title {
+    margin-top: 195px;
+  }
+}
+
 @media (max-width: 320px) {
   .image-conclusion__title {
     max-width: 288px;
