--- a/blocks/image-conclusion/image-conclusion.css
+++ b/blocks/image-conclusion/image-conclusion.css
@@ -1,11 +1,10 @@
 .image-conclusion {
   max-width: 1184px;
   min-height: 740px;
-  margin: 0 48px 0 48px;
+  margin: 12px 48px 0 48px;
   background-image: url('../../images/__background_na_baikal.png');
 
   background-size: cover;
-  overflow: hidden;
   z-index: 0;
   position: relative;
 
@@ -14,8 +13,7 @@
   align-content: center;
 }
 
-.image-conclusion:hover::before {
-  max-width: 1184px;
+.image-conclusion::before {
   content: "";
   position: absolute;
   top: 0;
@@ -26,21 +24,28 @@
 
   background-color: #2A2C2F;
   opacity: 0.3;
+}
+
+.image-conclusion:hover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+
+  background-color: #2A2C2F;
+  opacity: 0.8;
   transition: background-color 3s linear;
-  overflow: hidden;
 }
 
 @media (max-width: 1024px) {
   .image-conclusion {
     max-width: 1024px;
     min-height: 640px;
-    margin: 0;
-  }
-
-  .image-conclusion.image-conclusion:hover::before {
-    max-width: 1024px;
-    min-height: 640px;
-    margin: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -48,13 +53,6 @@
   .image-conclusion {
     max-width: 768px;
     min-height: 480px;
-    margin: 0;
-  }
-
-  .image-conclusion.image-conclusion:hover::before {
-    max-width: 768px;
-    min-height: 480px;
-    margin: 0;
   }
 }
 
@@ -62,12 +60,5 @@
   .image-conclusion {
     max-width: 320px;
     min-height: 200px;
-    margin: 0;
-  }
-
-  .image-conclusion.image-conclusion:hover::before {
-    max-width: 320px;
-    min-height: 200px;
-    margin: 0;
   }
 }
