--- a/blocks/launch/__signature/launch__signature.css
+++ b/blocks/launch/__signature/launch__signature.css
@@ -1,7 +1,7 @@
 .launch__signature {
   max-width: 158px;
 
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
