--- a/blocks/launch/__subtitle/launch__subtitle.css
+++ b/blocks/launch/__subtitle/launch__subtitle.css
@@ -1,7 +1,7 @@
 .launch__subtitle {
   max-width: 640px;
-
-  font-family: 'Inter';
+  display: block;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 30px;
@@ -11,7 +11,13 @@
 
   margin: 0 auto;
   padding-top: 32px;
-  padding-bottom: 54px;
+  padding-bottom: 64px;
+}
+
+@media (max-width: 1024px) {
+  .launch__subtitle {
+    padding-bottom: 56px;
+  }
 }
 
 @media (max-width: 320px) {
