--- a/blocks/launch/__title/launch__title.css
+++ b/blocks/launch/__title/launch__title.css
@@ -1,5 +1,6 @@
 .launch__title {
-  font-family: 'Inter';
+  display: block;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 96px;
@@ -10,6 +11,12 @@
 
   margin: 0 auto;
   padding-top: 56px;
+}
+
+@media (max-width: 1024px) {
+  .launch__title {
+    padding-top: 48px;
+  }
 }
 
 @media (max-width: 320px) {
