--- a/blocks/motivation/__text/motivation__text.css
+++ b/blocks/motivation/__text/motivation__text.css
@@ -1,11 +1,12 @@
 .motivation__text {
   max-width: 690px;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 163%;
   color: #FFFFFF;
+  margin-bottom: 32px;
 }
 
 @media (max-width: 780px) {
