--- a/blocks/motivation/__title/motivation__title.css
+++ b/blocks/motivation/__title/motivation__title.css
@@ -1,11 +1,12 @@
 .motivation__title {
   max-width: 690px;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
   line-height: 1.07;
   color: #FFFFFF;
+  margin-bottom: 40px;
 }
 
 @media (max-width: 768px) {
