--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,9 @@
 .page {
-  /* min-width: 320px; */
+  min-width: 320px;
   max-width: 1280px;
-  font-family: Inter, Arial, sans-serif;
+  font-family: 'Inter', 'Arial', sans-serif;
 
   background-color: #2A2C2F;
   margin: 0 auto;
 }
+
