добавлено изменение курсора по наведению на ссылки

--- a/blocks/footer/__menu-link/footer__menu-link.css
+++ b/blocks/footer/__menu-link/footer__menu-link.css
@@ -11,6 +11,10 @@
   padding: 0;
 }
 
+.footer__menu-link:hover {
+  cursor: url(/images/mycursor.svg), auto;
+}
+
 @media (max-width: 768px) {
   .footer__menu-link {
 
