--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -13,6 +13,10 @@
   text-decoration: none;
 }
 
+.header__lang-link:hover {
+  cursor: url(/images/mycursor.svg), auto;
+}
+
 @media (max-width: 320px) {
   .header__lang-link {
     font-size: 18px;
