--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,6 +1,6 @@
 .cards__item {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns:  auto auto;
   row-gap: 48px;
   column-gap: 40px;
   padding-bottom: 80px;
@@ -9,21 +9,21 @@
 @media (max-width: 1024px) {
   .cards__item {
     column-gap: 32px;
-
   }
 }
 
 @media (max-width: 768px) {
   .cards__item {
     max-width: 720px;
-    column-gap: 73px; /* проверить св-во */
     column-gap: 28px;
+    margin: 0;
+    padding: 0;
   }
 }
 
 @media (max-width: 320px) {
   .cards__item {
     grid-template-columns: auto;
-    column-gap: 50px;
+    row-gap: 32px;
   }
 }
