--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -8,6 +8,7 @@
   color: #FFFFFF;
   margin: 0;
   padding: 0;
+  display: block;
 }
 
 @media (max-width: 1024px) {
@@ -20,7 +21,7 @@
   .cards__title {
     max-width: 340px;
     font-size: 42px;
-    line-height: 46px;
+    line-height: 1.1;
   }
 }
 
@@ -28,7 +29,6 @@
   .cards__title {
     max-width: 288px;
     font-size: 32px;
-    line-height: 35px;
     margin-left: 16px;
   }
 }
