--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -18,6 +18,8 @@
     max-width: 720px;
     margin-left: 24px;
     margin-right: 24px;
+    row-gap: 72px;
+    padding-top: 46px;
   }
 }
 
@@ -26,5 +28,7 @@
     max-width: 320px;
     margin-left: 0;
     margin-right: 0;
+    padding: 0;
+    row-gap: 50px;
   }
 }
