--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -33,9 +33,8 @@
 @media (max-width: 320px) {
   .footer__copyright {
     max-width: 186px;
-
+    text-align: left;
     line-height: 14px;
-    justify-self: start;
     margin: 0;
     padding: 0;
   }
