--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -24,7 +24,6 @@
 @media (max-width: 320px) {
   .header {
     max-width: 288px;
-    margin-right: 16px;
-    margin-left: 16px;
+    margin: 16px 16px 48px 16px;
   }
 }
