--- a/blocks/image-conclusion/__title/image-conclusion__title.css
+++ b/blocks/image-conclusion/__title/image-conclusion__title.css
@@ -19,6 +19,12 @@
   }
 }
 
+@media (max-width: 768px) {
+  .image-conclusion__title {
+    margin-top: 115px;
+  }
+}
+
 @media (max-width: 320px) {
   .image-conclusion__title {
     max-width: 288px;
