--- a/blocks/launch/__signature/launch__signature.css
+++ b/blocks/launch/__signature/launch__signature.css
@@ -13,3 +13,16 @@
 
   padding-top: 8px;
 }
+
+@media (max-width: 768px) {
+  .launch__signature {
+    padding-left: 24px;
+  }
+}
+
+@media (max-width: 320px) {
+  .launch__signature {
+    padding-left: 16px;
+    padding-top: 6px;
+  }
+}
