--- a/blocks/motivation/__text/motivation__text.css
+++ b/blocks/motivation/__text/motivation__text.css
@@ -6,10 +6,10 @@
   font-size: 16px;
   line-height: 163%;
   color: #FFFFFF;
-  margin-bottom: 32px;
+  margin-bottom: 33px;
 }
 
-@media (max-width: 780px) {
+@media (max-width: 768px) {
   .motivation__text {
     max-width: 720px;
   }
@@ -18,5 +18,7 @@
 @media (max-width: 320px) {
   .motivation__text {
     max-width: 288px;
+    margin-bottom: 34px;
+    margin-top: 0;
   }
 }
