--- a/blocks/motivation/motivation.css
+++ b/blocks/motivation/motivation.css
@@ -13,7 +13,7 @@
 @media (max-width: 768px) {
   .motivation {
     max-width: 720px;
-    margin-top: 110px;
+    margin-top: 88px;
     margin-left: 24px;
   }
 }
@@ -21,7 +21,6 @@
 @media (max-width: 320px) {
   .motivation {
     max-width: 288px;
-    margin-top: 64px;
-    margin-left: 16px;
+    margin: 64px 16px;
   }
 }
