исправлен путь к курсору svg

--- a/blocks/image-conclusion/__link/image-conclusion__link.css
+++ b/blocks/image-conclusion/__link/image-conclusion__link.css
@@ -4,6 +4,6 @@
 }
 
 .image-conclusion__link:hover {
-  cursor: url(/images/mycursor.svg), auto;
+  cursor: url(../../../images/mycursor.svg), auto;
 }
 
