--- a/blocks/footer/__menu-link/footer__menu-link.css
+++ b/blocks/footer/__menu-link/footer__menu-link.css
@@ -12,18 +12,12 @@
 }
 
 .footer__menu-link:hover {
-  cursor: url(/images/mycursor.svg), auto;
-}
-
-@media (max-width: 768px) {
-  .footer__menu-link {
-
-  }
+  cursor: url(../../../images/mycursor.svg), auto;
 }
 
 @media (max-width: 320px) {
   .footer__menu-link {
     font-size: 24px;
-    line-height: 24px;
+    line-height: 1;
   }
 }
