--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -14,7 +14,7 @@
 }
 
 .header__lang-link:hover {
-  cursor: url(/images/mycursor.svg), auto;
+  cursor: url(../../../images/mycursor.svg), auto;
 }
 
 @media (max-width: 320px) {
