исправлены замечания, добавлены промежуточные точки на низких разрешениях, для удаления горизонтальных скроллов

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -19,12 +19,20 @@
   }
 }
 
+@media (max-width: 540px) {
+  .footer {
+    max-width: 200px;
+    flex-direction: column;
+  }
+}
+
 @media (max-width: 320px) {
   .footer {
     max-width: 186px;
+    margin-top: 64px;
     margin-left: 16px;
     margin-bottom: 24px;
-    flex-direction: column;
+
     gap: 48px;
   }
 }
