--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -15,6 +15,7 @@
 
 .header__lang-link:hover {
   cursor: url(../../../images/mycursor.svg), auto;
+  opacity: 0.8;
 }
 
 @media (max-width: 320px) {
