--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,6 +1,6 @@
 .cards__item {
   display: grid;
-  grid-template-columns:  auto auto;
+  grid-template-columns:  auto 1fr;
   row-gap: 48px;
   column-gap: 40px;
   padding-bottom: 80px;
@@ -21,9 +21,15 @@
   }
 }
 
+@media (max-width: 580px) {
+  .cards__item {
+    max-width: 100%;
+    grid-template-columns: 1fr;
+  }
+}
+
 @media (max-width: 320px) {
   .cards__item {
-    grid-template-columns: auto;
     row-gap: 32px;
   }
 }
