--- a/blocks/footer/__menu-link/footer__menu-link.css
+++ b/blocks/footer/__menu-link/footer__menu-link.css
@@ -13,6 +13,7 @@
 
 .footer__menu-link:hover {
   cursor: url(../../../images/mycursor.svg), auto;
+  opacity: 0.8;
 }
 
 @media (max-width: 320px) {
