--- a/blocks/image-conclusion/image-conclusion.css
+++ b/blocks/image-conclusion/image-conclusion.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   align-content: center;
+  transition: background-color 3s linear;
 }
 
 .image-conclusion::before {
@@ -27,17 +28,7 @@
 }
 
 .image-conclusion:hover::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-
-  background-color: #2A2C2F;
   opacity: 0.8;
-  transition: background-color 3s linear;
 }
 
 @media (max-width: 1024px) {
@@ -57,10 +48,13 @@
   }
 }
 
+@media (max-width: 560px) {
+  max-width: 100%;
+  min-height: 100%;
+}
+
 @media (max-width: 320px) {
   .image-conclusion {
-    max-width: 320px;
-    min-height: 200px;
     margin-top: 66px;
   }
 }
