--- a/blocks/launch/__title/launch__title.css
+++ b/blocks/launch/__title/launch__title.css
@@ -1,4 +1,5 @@
 .launch__title {
+  max-width: 720px;
   display: block;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
@@ -7,7 +8,6 @@
   line-height: 1.04;
   text-align: center;
   color: #FFFFFF;
-  max-width: 700px;
 
   margin: 0 auto;
   padding-top: 56px;
@@ -19,11 +19,31 @@
   }
 }
 
+@media (max-width: 768px) {
+  .launch__title {
+    max-width: 90%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media (max-width: 740px) {
+  .launch__title {
+    font-size: 50px;
+  }
+}
+
+@media (max-width: 740px) {
+  .launch__title {
+    font-size: 40px;
+  }
+}
+
 @media (max-width: 320px) {
   .launch__title {
     max-width: 288px;
     font-size: 40px;
     line-height: 1.1;
-    padding-top: 0px;
+    padding-top: 0;
   }
 }
