--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -19,20 +19,26 @@
   }
 }
 
+@media (max-width: 638px) {
+  .footer {
+    flex-direction: column;
+    gap: 18px;
+  }
+
+}
+
 @media (max-width: 540px) {
   .footer {
-    max-width: 200px;
-    flex-direction: column;
+    max-width: 186px;
+    gap: 48px;
   }
 }
 
 @media (max-width: 320px) {
   .footer {
-    max-width: 186px;
     margin-top: 64px;
     margin-left: 16px;
     margin-bottom: 24px;
-
     gap: 48px;
   }
 }
