--- a/blocks/image-conclusion/image-conclusion.css
+++ b/blocks/image-conclusion/image-conclusion.css
@@ -50,14 +50,16 @@
 
 @media (max-width: 560px) {
   .image-conclusion {
-    max-width: 100%;
-    min-height: 100%;
+    max-width: 560px;
+    min-height: 280px;
   }
 
 }
 
-@media (max-width: 320px) {
+@media (max-width: 380px) {
   .image-conclusion {
     margin-top: 66px;
+    max-width: 320px;
+    min-height: 200px;
   }
 }
