--- a/blocks/cards/__link-url/cards__link-url.css
+++ b/blocks/cards/__link-url/cards__link-url.css
@@ -24,7 +24,7 @@
   }
 }
 
-@media (max-width: 380px) {
+@media (max-width: 568px) and (min-width: 320px) {
   .cards__link-url {
     max-width: 288px;
   }
