--- a/blocks/cards/__paragraph/cards__paragraph.css
+++ b/blocks/cards/__paragraph/cards__paragraph.css
@@ -33,7 +33,7 @@
   }
 }
 
-@media (max-width: 380px) {
+@media (max-width: 568px) and (min-width: 320px) {
   .cards__paragraph {
     max-width: 288px;
     margin-left: 16px;
