--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -24,15 +24,10 @@
   }
 }
 
-@media (max-width: 638px) {
-  .footer__copyright {
-    text-align: left;
-  }
-}
-
-@media (max-width: 320px) {
+@media (max-width: 568px) and (min-width: 320px) {
   .footer__copyright {
     text-align: left;
     line-height: 14px;
   }
 }
+
