--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,14 @@
 .footer {
-  max-width: 1184px;
-  margin: 92px 48px 24px 48px;
-
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
+}
+
+@media (max-width: 1280px) {
+  .footer {
+    max-width: 1184px;
+    margin: 92px 48px 24px 48px;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -19,26 +24,13 @@
   }
 }
 
-@media (max-width: 638px) {
-  .footer {
-    flex-direction: column;
-    gap: 18px;
-  }
-
-}
-
-@media (max-width: 540px) {
+@media (max-width: 767px) and (min-width: 320px) {
   .footer {
     max-width: 186px;
+    flex-direction: column;
+    margin-top: 64px;
+    margin-left: 16px;
     gap: 48px;
   }
 }
 
-@media (max-width: 320px) {
-  .footer {
-    margin-top: 64px;
-    margin-left: 16px;
-    margin-bottom: 24px;
-    gap: 48px;
-  }
-}
