--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,6 +6,12 @@
   align-items: center;
 }
 
+@media (max-width: 1280px) {
+  .header {
+
+  }
+}
+
 @media (max-width: 1024px) {
   .header {
     max-width: 928px;
@@ -21,9 +27,9 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 767px) and (min-width: 320px) {
   .header {
     max-width: 288px;
-    margin: 16px 16px 48px 16px;
+    margin: 16px  auto 48px auto;
   }
 }
