--- a/blocks/image-conclusion/__subtitle/image-conclusion__subtitle.css
+++ b/blocks/image-conclusion/__subtitle/image-conclusion__subtitle.css
@@ -25,7 +25,7 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 767px) and (min-width: 320px) {
   .image-conclusion__subtitle {
     max-width: 288px;
     font-size: 14px;
