--- a/blocks/image-conclusion/__title/image-conclusion__title.css
+++ b/blocks/image-conclusion/__title/image-conclusion__title.css
@@ -25,17 +25,11 @@
   }
 }
 
-@media (max-width: 560px) {
+@media (max-width: 767px) and (min-width: 320px) {
   .image-conclusion__title {
-    max-width: 100%;
+    max-width: 288px;
     font-size: 32px;
     line-height: 1.09;
     margin: 33px auto 0;
-  }
-}
-
-@media (max-width: 320px) {
-  .image-conclusion__title {
-    max-width: 288px;
   }
 }
