--- a/blocks/launch/__image-background/launch__image-background.css
+++ b/blocks/launch/__image-background/launch__image-background.css
@@ -1,12 +1,5 @@
 .launch__image-background {
-  object-fit: cover;
-  max-width: 984px;
-  min-height: 615px;
-}
-
-@media (max-width: 1024px) {
-  .launch__image-background {
-    max-width: 100%;
-    min-height: 100%;
-  }
+  background-size: cover;
+  max-width: 100%;
+  min-height: 100%;
 }
