--- a/blocks/launch/__title/launch__title.css
+++ b/blocks/launch/__title/launch__title.css
@@ -19,16 +19,11 @@
   }
 }
 
-@media (max-width: 740px) {
-  .launch__title {
-    font-size: 40px;
-  }
-}
-
-@media (max-width: 320px) {
+@media (max-width: 767px) and (min-width: 320px) {
   .launch__title {
     max-width: 288px;
     line-height: 1.1;
     padding-top: 0;
+    font-size: 40px;
   }
 }
