--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,8 @@
 @import url(../vendor/fonts/inter.css);
 @import url(../blocks/page/page.css);
 
+@import url(../blocks/content/content.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-link/_enabled/header__lang-link_enabled.css);
