работа переделана по принципу mobile-first

--- a/blocks/cards/__link-heading/cards__link-heading.css
+++ b/blocks/cards/__link-heading/cards__link-heading.css
@@ -15,14 +15,14 @@
   letter-spacing: 2px;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .cards__link-heading {
     max-width: 352px;
 
   }
 }
 
-@media (max-width: 568px) {
+@media (min-width: 380px) {
   .cards__link-heading {
     max-width: 288px;
   }
