--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,29 +1,33 @@
 .cards__image {
-  width: 460px;
-  height: 460px;
   display: block;
   margin: 0;
   object-fit: cover;
   object-position: center;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 320px) {
+  .cards__image {
+    width: 320px;
+    height: 320px;
+  }
+}
+
+@media (min-width: 768px) {
+  .cards__image {
+    width: 340px;
+    height: 340px;
+  }
+}
+@media (min-width: 1024px) {
   .cards__image {
     width: 440px;
     height: 440px;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 1280px) {
   .cards__image {
-    width: 340px;
-    height: 340px;
-  }
-}
-
-@media (max-width: 320px) {
-  .cards__image {
-    width: 320px;
-    height: 320px;
+    width: 460px;
+    height: 460px;
   }
 }
