--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,35 +1,36 @@
 .cards__item {
-  display: grid;
-  grid-template-columns:  auto 1fr;
-  row-gap: 48px;
-  column-gap: 40px;
-  padding-bottom: 80px;
+
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .cards__item {
-    column-gap: 32px;
+    margin-bottom: 32px;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .cards__item {
-    max-width: 720px;
+    display: grid;
+    grid-template-columns:  auto 1fr;
+    row-gap: 48px;
+    column-gap: 40px;
+    padding-bottom: 80px;
+    /* max-width: 720px; */
     column-gap: 28px;
     margin: 0;
     padding: 0;
   }
 }
 
-@media (max-width: 568px) {
+@media (min-width: 1024px) {
   .cards__item {
-    max-width: 100%;
-    grid-template-columns: 1fr;
+    max-width: : 928px;
+    column-gap: 32px;
   }
 }
 
-@media (max-width: 320px) {
+@media (min-width: 1280px) {
   .cards__item {
-    row-gap: 32px;
+    max-width: : 984px;
   }
 }
