--- a/blocks/cards/__link-url/cards__link-url.css
+++ b/blocks/cards/__link-url/cards__link-url.css
@@ -18,13 +18,13 @@
   opacity: 0.8;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .cards__link-url {
     max-width: 352px;
   }
 }
 
-@media (max-width: 568px) and (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .cards__link-url {
     max-width: 288px;
   }
