--- a/blocks/cards/__paragraph/cards__paragraph.css
+++ b/blocks/cards/__paragraph/cards__paragraph.css
@@ -1,42 +1,49 @@
 .cards__paragraph {
   display: block;
-  max-width: 484px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 163%;
   color: #FFFFFF;
-  padding-bottom: 27px;
-
-  margin: 0;
+  padding-bottom: 25px;
+  margin: 0 16px;
 }
 
 .cards__paragraph:last-child {
   padding-bottom: 0;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .cards__paragraph {
-    max-width: 456px;
+    max-width: 288px;
+    /* margin-top: 0;
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-bottom: 0; */
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .cards__paragraph {
     max-width: 352px;
     font-size: 16px;
-    padding-bottom: 25px;
+
     padding-left: 0;
     padding-right: 0;
     margin-right: 24px;
   }
 }
 
-@media (max-width: 568px) and (min-width: 320px) {
+@media (min-width: 1024px) {
   .cards__paragraph {
-    max-width: 288px;
-    margin-left: 16px;
-    margin-right: 16px;
+    max-width: 456px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .cards__paragraph {
+    max-width: 484px;
+    padding-bottom: 27px;
   }
 }
