--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -6,17 +6,20 @@
   font-size: 72px;
   line-height: 1.06;
   color: #FFFFFF;
-  margin: 0;
+
   padding: 0;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 320px) {
   .cards__title {
-    max-width: 440px;
+    max-width: 288px;
+    font-size: 32px;
+    margin-left: 16px;
+    margin-bottom: 32px;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .cards__title {
     max-width: 340px;
     font-size: 42px;
@@ -24,10 +27,8 @@
   }
 }
 
-@media (max-width: 568px) {
+@media (min-width: 1024px) {
   .cards__title {
-    max-width: 288px;
-    font-size: 32px;
-    margin-left: 16px;
+    max-width: 440px;
   }
 }
