--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,33 +1,32 @@
-.cards {
-  display: grid;
-  max-width: 984px;
-  margin: 0 148px 0 148px;
-  box-sizing: border-box;
-}
-
-@media (max-width: 1024px) {
-  .cards {
-    max-width: 928px;
-    margin: 0 48px 0 48px;
-  }
-}
-
-@media (max-width: 768px) {
-  .cards {
-    max-width: 720px;
-    margin-left: 24px;
-    margin-right: 24px;
-    row-gap: 73px;
-    padding: 0;
-  }
-}
-
-@media (max-width: 568px) and (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .cards {
     max-width: 320px;
-    row-gap: 50px;
+    margin-bottom: 50px;
     margin-left: 0;
     margin-right: 0;
   }
 }
 
+@media (min-width: 768px) {
+  .cards {
+    max-width: 720px;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-bottom: 73px;
+    padding: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .cards {
+    max-width: 928px;
+    margin: 0 48px 80px 48px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .cards {
+    max-width: 984px;
+    margin: 0 48px 80px 48px;
+  }
+}
