--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,33 +4,30 @@
   justify-content: space-between;
 }
 
-@media (max-width: 1280px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .footer {
-    max-width: 1184px;
-    margin: 92px 48px 24px 48px;
+    max-width: 288px;
+    margin-top: 64px;
   }
 }
 
-@media (max-width: 1024px) {
-  .footer {
-    max-width: 928px;
-  }
-}
-
-@media (max-width: 768px) {
+@media (min-width: 768px) and (max-width: 1023px) {
   .footer {
     max-width: 720px;
-    margin: 88px 24px 24px 24px;
+    margin-top: 88px;
   }
 }
 
-@media (max-width: 767px) and (min-width: 320px) {
+@media (min-width: 1024px) and (max-width: 1279px) {
   .footer {
-    max-width: 186px;
-    flex-direction: column;
-    margin-top: 64px;
-    margin-left: 16px;
-    gap: 48px;
+    max-width: 928px;
+    margin-top: 92px;
   }
 }
 
+@media (min-width:1280px) {
+  .footer {
+    max-width: 1184px;
+    margin-top: 92px;
+  }
+}
