--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,9 +7,8 @@
   font-size: 24px;
   line-height: 1.17;
 
-  padding-top: 12px;
+  padding-top: 8px;
   margin: 0;
-
   text-decoration: none;
 }
 
@@ -18,7 +17,7 @@
   opacity: 0.8;
 }
 
-@media (max-width: 320px) {
+@media (min-width: 320px) and (max-width: 767px){
   .header__lang-link {
     font-size: 18px;
     line-height: 1.11;
