--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,35 +1,33 @@
 .header {
-  max-width: 1184px;
-  margin: 28px 48px 0 48px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 16px  auto 48px auto;
 }
 
-@media (max-width: 1280px) {
-  .header {
-
-  }
-}
-
-@media (max-width: 1024px) {
-  .header {
-    max-width: 928px;
-  }
-}
-
-@media (max-width: 768px) {
-  .header {
-    max-width: 720px;
-    margin-right: 24px;
-    margin-left: 24px;
-
-  }
-}
-
-@media (max-width: 767px) and (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .header {
     max-width: 288px;
-    margin: 16px  auto 48px auto;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .header {
+    max-width: 720px;
+    margin-top: 28px;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .header {
+    max-width: 928px;
+    margin-top: 28px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .header {
+    max-width: 1184px;
+    margin: 28px 48px 56px 48px;
   }
 }
