--- a/blocks/launch/__subtitle/launch__subtitle.css
+++ b/blocks/launch/__subtitle/launch__subtitle.css
@@ -1,31 +1,31 @@
 .launch__subtitle {
-  max-width: 640px;
-  display: block;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 30px;
-  line-height: 1.2;
+  font-size: 16px;
+  line-height: 120%;
   text-align: center;
   color: #FFFFFF;
-
-  margin: 0 auto;
-  padding-top: 32px;
-  padding-bottom: 64px;
+  margin: 0 auto 56px auto;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .launch__subtitle {
-    padding-bottom: 56px;
+    max-width: 288px;
+    margin-bottom: 40px;
   }
 }
 
-@media (max-width: 320px) {
+@media (min-width: 768px) {
   .launch__subtitle {
-    max-width: 288px;
-    font-size: 16px;
-    line-height: 1.25;
-    padding-top: 16px;
-    padding-bottom: 40px;
+    max-width: 640px;
+    font-size: 30px;
+    margin-bottom: 56px;
+  }
+}
+
+@media (min-width:1280px) {
+  .launch__subtitle {
+    margin-bottom: 64px;
   }
 }
