--- a/blocks/launch/launch.css
+++ b/blocks/launch/launch.css
@@ -1,31 +1,30 @@
 .launch {
-  max-width: 984px;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  margin: 0 148px;
+  margin: 0;
 }
 
-@media (max-width: 1024px) {
+/* @media (min-width: 320px) and (max-width: 767px) {
+  .launch {
+    max-width: 288px;
+  }
+} */
+
+/* @media (min-width: 768px) and (max-width: 1023px) {
+  .launch {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
   .launch {
     max-width: 928px;
-    margin-left: 48px;
-    margin-right: 48px;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width:1280px) {
   .launch {
-    max-width: 768px;
-    padding: 0;
+    max-width: 1184px;
+    margin: 28px 48px 0 48px;
   }
-}
-
-@media (max-width: 320px) {
-  .launch {
-    max-width: 320px;
-    margin-top: 40px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-}
+} */
