--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -3,7 +3,7 @@
   height: 52px;
 }
 
-@media (max-width: 320px) {
+@media (min-width: 320px) and (max-width: 767px){
   .logo {
     width: 142px;
     height: 42px;
