--- a/blocks/motivation/__list/motivation__list.css
+++ b/blocks/motivation/__list/motivation__list.css
@@ -1,28 +1,33 @@
 .motivation__list {
-  max-width: 690px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 12px;
   line-height: 1.5;
   color: #FFFFFF;
-  margin-top: 0;
-  margin-bottom: 92px;
-
   list-style: none;
+  margin: 0;
   padding: 0;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 767px){
+  .motivation__list {
+    max-width: 288px;
+    margin: 0;
+    margin-bottom: 64px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px){
   .motivation__list {
     max-width: 720px;
     margin-bottom: 88px;
   }
 }
 
-@media (max-width: 320px) {
+@media (min-width: 1024px) {
   .motivation__list {
-    max-width: 288px;
-    margin: 0;
+    max-width: 690px;
+    margin-bottom: 92px;
   }
 }
