--- a/blocks/motivation/__text/motivation__text.css
+++ b/blocks/motivation/__text/motivation__text.css
@@ -1,5 +1,4 @@
 .motivation__text {
-  max-width: 690px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -9,16 +8,22 @@
   margin-bottom: 33px;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 767px) {
+  .motivation__text {
+    max-width: 288px;
+    margin-bottom: 34px;
+    margin-top: 0;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
   .motivation__text {
     max-width: 720px;
   }
 }
 
-@media (max-width: 320px) {
+@media (min-width: 1024px) {
   .motivation__text {
-    max-width: 288px;
-    margin-bottom: 34px;
-    margin-top: 0;
+    max-width: 690px;
   }
 }
