--- a/blocks/motivation/motivation.css
+++ b/blocks/motivation/motivation.css
@@ -1,17 +1,16 @@
 .motivation {
-  max-width: 690px;
-  margin-top: 92px;
-  margin-left: 148px;
-  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .motivation {
-    margin-left: 48px;
+    max-width: 288px;
+    margin: 64px 16px;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) and (max-width: 1023px){
   .motivation {
     max-width: 720px;
     margin-top: 88px;
@@ -19,9 +18,15 @@
   }
 }
 
-@media (max-width: 380px) {
+@media (min-width: 1024px) {
   .motivation {
-    max-width: 288px;
-    margin: 64px 16px;
+    margin-left: 48px;
+    margin-top: 92px;
   }
 }
+
+@media (min-width: 1280px) {
+   .motivation {
+     margin-left: 148px;
+   }
+ }
