--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,34 +2,36 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
-
-  margin-left: 48px;
-  margin-right: 48px;
-  margin-bottom: 92px;
-  max-width: 1184px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .photo-grid {
-    gap: 14px;
-  }
-}
-
-@media (max-width: 768px) {
-  .photo-grid {
-    margin-left: 24px;
-    margin-right: 24px;
-    margin-bottom: 88px;
-    gap: 16px;
-  }
-}
-
-@media (max-width: 568px) {
-  .photo-grid {
-    margin-left: 16px;
-    margin-right: 16px;
+    max-width: 288px;
     gap: 12px;
     margin-bottom: 64px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .photo-grid {
+    margin-bottom: 88px;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .photo-grid {
+    max-width: 928px;
+    gap: 14px;
+    margin-bottom: 92px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .photo-grid {
+    max-width: 1184px;
+    margin-bottom: 92px;
   }
 }
