--- a/blocks/launch/__image-background/launch__image-background.css
+++ b/blocks/launch/__image-background/launch__image-background.css
@@ -1,6 +1,5 @@
 .launch__image-background {
-  object-fit: cover;
+  background-size: cover;
   max-width: 100%;
   min-height: 100%;
-  margin: 0;
 }
