--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -3,9 +3,10 @@
   margin: 0;
   object-fit: cover;
   object-position: center;
+  width: 100%;
 }
 
-@media (min-width: 320px) {
+/* @media (min-width: 320px) {
   .cards__image {
     width: 320px;
     height: 320px;
@@ -30,4 +31,4 @@
     width: 460px;
     height: 460px;
   }
-}
+} */
