--- a/blocks/cards/__link-heading/cards__link-heading.css
+++ b/blocks/cards/__link-heading/cards__link-heading.css
@@ -1,29 +1,26 @@
 .cards__link-heading {
-  max-width: 456px;
-
+  max-width: 288px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
-  line-height: 12px;
-
+  line-height: 1;
   color: #AAAAAA;
   margin: 0;
   padding: 0;
   text-transform: uppercase;
-  padding-bottom: 12px;
   letter-spacing: 2px;
 }
 
 @media (min-width: 768px) {
   .cards__link-heading {
     max-width: 352px;
-
   }
 }
 
-@media (min-width: 380px) {
+@media (min-width: 1024px) {
   .cards__link-heading {
-    max-width: 288px;
+    max-width: 456px;
+    line-height: 170%;
   }
 }
