--- a/blocks/cards/__link-url/cards__link-url.css
+++ b/blocks/cards/__link-url/cards__link-url.css
@@ -1,6 +1,5 @@
 .cards__link-url {
-  max-width: 456px;
-
+  max-width: 352px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -10,7 +9,7 @@
   text-decoration-line: underline;
 
   color: #FFFFFF;
-  margin-top: 12px;
+  padding-top: 12px;
 }
 
 .cards__link-url:hover {
@@ -24,8 +23,8 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 1024px) {
   .cards__link-url {
-    max-width: 288px;
+    max-width: 456px;
   }
 }
