--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -2,19 +2,19 @@
   margin:  auto;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) {
   .content {
     max-width: 320px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) {
   .content {
-    max-width: 720px;
+    max-width: 768px;
   }
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (min-width: 1024px) {
   .content {
     max-width: 928px;
   }
