--- a/blocks/footer/__menu-link/footer__menu-link.css
+++ b/blocks/footer/__menu-link/footer__menu-link.css
@@ -2,8 +2,8 @@
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 1.125;
+  font-size: 24px;
+  line-height: 1;
   color: #FFFFFF;
   text-decoration: none;
   display: block;
@@ -16,9 +16,9 @@
   opacity: 0.8;
 }
 
-@media (max-width: 767px) {
+@media (min-width: 768px) {
   .footer__menu-link {
-    font-size: 24px;
-    line-height: 1;
+    font-size: 16px;
+    line-height: 1.12;
   }
 }
