--- a/blocks/footer/__menu/footer__menu.css
+++ b/blocks/footer/__menu/footer__menu.css
@@ -3,9 +3,16 @@
   gap: 18px;
 }
 
-@media (max-width: 767px) {
+@media (min-width: 320px) {
   .footer__menu {
     flex-direction: column;
     gap: 32px;
+  }
+}
+
+@media (min-width: 768px) {
+  .footer__menu {
+    flex-direction: row;
+    gap: 18px;
   }
 }
