--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,20 +1,25 @@
 .footer {
-  margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  margin: 0 auto 24px auto;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) {
   .footer {
-    max-width: 288px;
+    max-width: 320px;
     margin-top: 64px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) {
   .footer {
     max-width: 720px;
     margin-top: 88px;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+
   }
 }
 
