--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,8 +4,8 @@
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 24px;
-  line-height: 1.17;
+  font-size: 18px;
+  line-height: 1.11;
 
   padding-top: 8px;
   margin: 0;
@@ -17,9 +17,10 @@
   opacity: 0.8;
 }
 
-@media (min-width: 320px) and (max-width: 767px){
+@media (min-width: 768px) {
   .header__lang-link {
-    font-size: 18px;
-    line-height: 1.11;
+    font-size: 28px;
+    line-height: 1.17;
+    padding-top: 12px;
   }
 }
