--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,23 +5,22 @@
   margin: 16px  auto 48px auto;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) {
   .header {
     max-width: 288px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) {
   .header {
     max-width: 720px;
     margin-top: 28px;
   }
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (min-width: 1024px) {
   .header {
     max-width: 928px;
-    margin-top: 28px;
   }
 }
 
