--- a/blocks/image-conclusion/__subtitle/image-conclusion__subtitle.css
+++ b/blocks/image-conclusion/__subtitle/image-conclusion__subtitle.css
@@ -1,35 +1,35 @@
 .image-conclusion__subtitle {
-  max-width: 360px;
+  max-width: 288px;
   display: block;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 1.22;
+  font-size: 14px;
+  line-height: 1.14;
 
   text-align: center;
   color: #FFFFFF;
-  margin: 32px auto 245px;
+  margin: 16px auto 33px;
   padding: 0;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 768px) {
+  .image-conclusion__subtitle {
+    margin-bottom: 115px;
+    max-width: 360px;
+    font-size: 18px;
+    line-height: 1.22;
+  }
+}
+
+@media (min-width: 1024px) {
   .image-conclusion__subtitle {
     margin-bottom: 195px;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 1280px) {
   .image-conclusion__subtitle {
-    margin-bottom: 115px;
-  }
-}
-
-@media (max-width: 767px) and (min-width: 320px) {
-  .image-conclusion__subtitle {
-    max-width: 288px;
-    font-size: 14px;
-    line-height: 1.14;
-    margin: 16px auto 33px auto;
+    margin-bottom: 245px;
   }
 }
