--- a/blocks/image-conclusion/__title/image-conclusion__title.css
+++ b/blocks/image-conclusion/__title/image-conclusion__title.css
@@ -1,35 +1,35 @@
 .image-conclusion__title {
-  max-width: 560px;
+  max-width: 288px;
   display: block;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 900;
-  font-size: 72px;
-  line-height: 1.06;
+  font-size: 32px;
+  line-height: 1.09;
 
   text-align: center;
   color: #FFFFFF;
-  margin: 245px auto 0;
+  margin: 33px auto 0;
   padding: 0;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 768px) {
+  .image-conclusion__title {
+    max-width: 560px;
+    margin-top: 115px;
+    font-size: 72px;
+    line-height: 1.06;
+  }
+}
+
+@media (min-width: 1024px) {
   .image-conclusion__title {
     margin-top: 195px;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 1024px) {
   .image-conclusion__title {
-    margin-top: 115px;
-  }
-}
-
-@media (max-width: 767px) and (min-width: 320px) {
-  .image-conclusion__title {
-    max-width: 288px;
-    font-size: 32px;
-    line-height: 1.09;
-    margin: 33px auto 0;
+    margin-top: 245px;
   }
 }
