--- a/blocks/launch/__image-container/launch__image-container.css
+++ b/blocks/launch/__image-container/launch__image-container.css
@@ -1,21 +1,21 @@
 .launch__image-container {
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) {
   .launch__image-container {
     max-width: 320px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) {
   .launch__image-container {
     max-width: 768px;
   }
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (min-width: 1024px) {
   .launch__image-container {
     max-width: 928px;
   }
@@ -24,6 +24,7 @@
 @media (min-width:1280px) {
   .launch__image-container {
     max-width: 984px;
-    margin: 0 148px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
