--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,11 +1,11 @@
 .logo {
-  width: 176px;
-  height: 52px;
+  width: 142px;
+  height: 42px;
 }
 
-@media (min-width: 320px) and (max-width: 767px){
+@media (min-width: 768px) {
   .logo {
-    width: 142px;
-    height: 42px;
+    width: 176px;
+    height: 52px;
   }
 }
