--- a/blocks/motivation/__list/motivation__list.css
+++ b/blocks/motivation/__list/motivation__list.css
@@ -10,15 +10,14 @@
   padding: 0;
 }
 
-@media (min-width: 320px) and (max-width: 767px){
+@media (min-width: 320px) {
   .motivation__list {
     max-width: 288px;
-    margin: 0;
     margin-bottom: 64px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px){
+@media (min-width: 768px) {
   .motivation__list {
     max-width: 720px;
     margin-bottom: 88px;
