--- a/blocks/motivation/__text/motivation__text.css
+++ b/blocks/motivation/__text/motivation__text.css
@@ -5,14 +5,14 @@
   font-size: 16px;
   line-height: 163%;
   color: #FFFFFF;
+  margin-top: 0;
   margin-bottom: 33px;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) {
   .motivation__text {
     max-width: 288px;
-    margin-bottom: 34px;
-    margin-top: 0;
+
   }
 }
 
