--- a/blocks/motivation/motivation.css
+++ b/blocks/motivation/motivation.css
@@ -3,14 +3,14 @@
   margin-right: auto;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) {
   .motivation {
     max-width: 288px;
     margin: 64px 16px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px){
+@media (min-width: 768px) {
   .motivation {
     max-width: 720px;
     margin-top: 88px;
@@ -20,13 +20,14 @@
 
 @media (min-width: 1024px) {
   .motivation {
-    margin-left: 48px;
+    max-width: 690px;
+    margin-left: 0;
     margin-top: 92px;
   }
 }
 
 @media (min-width: 1280px) {
    .motivation {
-     margin-left: 148px;
+     margin-left: 100px;
    }
  }
