--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,13 +1,13 @@
 .photo-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-  gap: 16px;
+
   margin-left: auto;
   margin-right: auto;
   padding: 0;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) {
   .photo-grid {
     max-width: 288px;
     gap: 12px;
@@ -15,13 +15,15 @@
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) {
   .photo-grid {
+    max-width: 720px;
+    gap: 16px;
     margin-bottom: 88px;
   }
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (min-width: 1024px) {
   .photo-grid {
     max-width: 928px;
     gap: 14px;
@@ -32,6 +34,6 @@
 @media (min-width: 1280px) {
   .photo-grid {
     max-width: 1184px;
-    margin-bottom: 92px;
+    gap: 16px;
   }
 }
