--- a/blocks/motivation/motivation.css
+++ b/blocks/motivation/motivation.css
@@ -21,8 +21,8 @@
 @media (min-width: 1024px) {
   .motivation {
     max-width: 690px;
-    margin-left: 0;
     margin-top: 92px;
+    margin-left: 48px;
   }
 }
 
